--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Изход",
     "hih_filter_plasma": "Плазмен филтър",
     "wm_sell_point_video": "Рекламен видеоклип",
-    "wm_max": "Макс.",
+    "wm_max": "Макс",
     "timing_add_less_then_4_hour": "Времето за нагряване е кратко, зададената температура може да не бъде достигната",
     "ticket_save_success": "Билетът е запазен успешно",
     "native_language_tips": "Тази настройка няма да промени езика на приложението. Използва се само за комуникационни цели.",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Старейшина",
     "drum_illumination_desc": "Осветлението на барабана осветява вътрешността на барабана, което ви помага при зареждане и изпразване на машината - просто е по-лесно да видите останалия чорап в барабана. Той също така улеснява проверката при почистване на повдигачи и вложки на повдигачи.",
     "turn_on_drum_illumination": "Включете/изключете осветлението",
-    "wine_time": "Време",
+    "wine_time": "път",
     "delete_account_camel_case": "Изтриване на акаунт",
     "program_mode_desc": "Програмният режим ви позволява да персонализирате вашата програма за сушене и да я коригирате според вашите нужди. По-долу можете да прочетете за различните режими и тяхната функционалност.",
     "program_mode_available": "Предлагат се следните режими на пране:",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Открийте",
     "CL_DV_HOB_cooking_assist": "Помощ при готвене",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ИЗБЕРЕТЕ МОДЕЛА НА УСТРОЙСТВОТО",
-    "CL_CF_FM_all_purchases_added_to_rf": "Всички ваши покупки са добавени в хладилника"
+    "CL_CF_FM_all_purchases_added_to_rf": "Всички ваши покупки са добавени в хладилника",
+    "CL_DV_HOB_guide_for_best_results": "Насоки за най-добри резултати",
+    "CL_DV_HOB_program_content_step1": "Изберете количеството.",
+    "CL_DV_HOB_program_content_step2": "Изберете зоната за готвене, която искате да използвате. ",
+    "CL_DV_HOB_program_content_step3": "Потвърдете с бутон “WIFI” на избраната зона на индукционния плот.",
+    "CL_DV_HOB_temperature_content_step1": "Изберете температурата.",
+    "CL_CF_AS_your_device_offline": "Вашето устройство е офлайн",
+    "CL_CF_AS_waiting": "чакам...",
+    "CL_CF_CS_window_air_select_panel": "Изберете изображението, което съответства на контролния панел на вашето устройство.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Изберете зоната за готвене или зоните с мост, които искате да използвате. "
 }
