--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Starší",
     "drum_illumination_desc": "Osvětlení bubnu osvětluje vnitřek bubnu, což vám pomáhá při plnění a vyprazdňování stroje - jednoduše je lépe vidět zbývající ponožku uvnitř bubnu. Usnadňuje také kontrolu při čištění zvedáků a vložek zvedáků.",
     "turn_on_drum_illumination": "Zapnout/vypnout podsvícení",
-    "wine_time": "Čas",
+    "wine_time": "krát",
     "delete_account_camel_case": "Smazat účet",
     "program_mode_desc": "Programový režim vám umožňuje přizpůsobit si program sušení a upravit jej podle vašich potřeb. Níže si můžete přečíst o různých režimech a jejich funkčnosti.",
     "program_mode_available": "K dispozici jsou následující režimy mytí:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "Nenašli jsme žádné zařízení Bluetooth. Můžete kliknout na tlačítko \"TRY AGAIN\" a hledat znovu nebo síť nakonfigurovat jiným způsobem.",
     "CL_DV_WM_pump_cleaning": "Čisticí čerpadlo...",
     "CL_DV_WM_autodoes_tip": "Povolte tuto funkci a vaše zařízení bude během praní chytře dávkovat prací prostředek a aviváž.",
-    "CL_DV_WM_detergent_department_key": "PŘIHRÁDKA NA PRACÍ PROSTŘEDEK",
+    "CL_DV_WM_detergent_department_key": "Přihrád. prací prostř.",
     "CL_DV_WM_Dosage_Amount_key": "Dávka Množství",
     "CL_DV_WM_softener_department_key": "Přihr. změk. prostř.",
     "CL_DV_WM_auto_does_with_detergent": "Automatické dávkování s detergentem",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Normální dávkování: 4~5 kg hmotnosti oblečení.",
     "CL_DV_WM_pump_clean_note_1": "Poznámky: Pokud chcete změnit obsah dávkovací součásti, nezapomeňte na to ",
     "CL_DV_WM_pump_clean_note_2": "nejprve součást očistěte.",
-    "CL_DV_WM_Pump_clean_key": "Čerpadlo čisté",
+    "CL_DV_WM_Pump_clean_key": "Čištění čerp.",
     "CL_DV_WM_pump_clean_how_to_use": "Jak používat?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1. Před aktivací funkce čištění čerpadla vyprázdněte a naplňte přihrádku vodou.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktivujte funkci čištění čerpadla ze strany stroje.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Objevit",
     "CL_DV_HOB_cooking_assist": "Pomocník při vaření",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "VYBERTE SI MODEL ZAŘÍZENÍ",
-    "CL_CF_FM_all_purchases_added_to_rf": "Všechny vaše nákupy byly přidány do chladničky"
+    "CL_CF_FM_all_purchases_added_to_rf": "Všechny vaše nákupy byly přidány do chladničky",
+    "CL_DV_HOB_guide_for_best_results": "Návod k dosažení nejlepších výsledků",
+    "CL_DV_HOB_program_content_step1": "Vyberte množství.",
+    "CL_DV_HOB_program_content_step2": "Vyberte varnou zónu, kterou chcete použít. ",
+    "CL_DV_HOB_program_content_step3": "Potvrďte tlačítkem „WIFI“ na vybrané zóně na indukční varné desce.",
+    "CL_DV_HOB_temperature_content_step1": "Zvolte teplotu.",
+    "CL_CF_AS_your_device_offline": "Vaše zařízení je offline",
+    "CL_CF_AS_waiting": "čekání...",
+    "CL_CF_CS_window_air_select_panel": "Vyberte obrázek, který odpovídá ovládacímu panelu vaší jednotky.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Vyberte varnou zónu nebo přemostěné zóny, které chcete použít. "
 }
