--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -765,10 +765,10 @@
     "expiry_date": "Expiry date",
     "item_photo": "ITEM PHOTO",
     "send_to_shopping_list": "SEND TO SHOPPING LIST",
-    "hisrf_exit_eco_mode": "Manual temperature adjustment  Exit ECO mode",
+    "hisrf_exit_eco_mode": "Exit ECO mode",
     "hisrf_exit_holiday_mode": "Manual temperature adjustment Exit  Holiday mode",
-    "hisrf_exit_super_freeze_mode": "Manual temperature adjustment Exit  Super Freeze mode",
-    "hisrf_exit_super_cool_mode": "Manual temperature adjustment Exit  Super Cool mode",
+    "hisrf_exit_super_freeze_mode": "Exit Super Freeze mode",
+    "hisrf_exit_super_cool_mode": "Exit Super Cool mode",
     "hisrf_water_filter_service": "Contact after sale service",
     "shopping_list_empty_title": "Shopping list is empty!",
     "shopping_list_empty_hint": "Click \"ADD ITEM\" button to add items to shopping list or add them from library.",
@@ -3347,7 +3347,7 @@
     "after_sale_report_failed_desc": "An unexpected error occured. Try again or contact aftersales services.",
     "country_and_region": "Country / Region",
     "rf_ai": "AI",
-    "exit_ai_mode_toast": "Manual temperature adjustment  Exit AI mode",
+    "exit_ai_mode_toast": "Exit AI mode",
     "rf_fuzzy_desc": "The temperature of the fridge is automatically switched to 5°C and the freezer to -18°C，it is a smart mode to keep foods in their best condition.",
     "after_sale_unsupported_ts_tips": "We're sorry, but troubleshooting information for this device is currently unavailable. Our team is working to provide support for this device soon. \n\nIn the meantime, if you have questions about your product, or if you need parts or services, please contact our customer support team of your region.\n\nIf you are in the US, you can reach our customer support team at 1-877-465-3566.\n\nFor other contries, please check the information provided in your products user manual.",
     "after_sale_unsupported_ri_tips": "We're sorry, but reporting an issue for this device is currently unavailable. Our team is working to provide support for this device soon. \n\nIn the meantime, if you have questions about your product, or if you need parts or services, please contact our customer support team of your region.\n\nIf you are in the US, you can reach our customer support team at 1-877-465-3566.\n\nFor other contries, please check the information provided in your products user manual.",
@@ -3579,8 +3579,8 @@
     "blue_power_off_title_add_device": "Turn on the Bluetooth for this device",
     "blue_permission_off_title_add_device": "Bluetooth disabled for ConnectLife",
     "time_care_desc": "When this function is activated, the washing programme will be carried out with a shorter washing duration.",
-    "refr_exit_super_cool_tips": "Now turn on Super Freezer mode and exit Super Cool mode",
-    "refr_exit_super_freeze_tips": "Now turn on Super Cool mode and exit Super Freeze mode",
+    "refr_exit_super_cool_tips": "Exit Super Cool mode",
+    "refr_exit_super_freeze_tips": "Exit Super Freeze mode",
     "enter_recipe_name": "Enter recipe name...",
     "results": "results",
     "no_favourite_recipes": "No favorite recipes",
@@ -4055,7 +4055,7 @@
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat is the quickest way to preheat your oven. It takes approximately 7 minutes.",
     "CL_DV_OV_preheat_desc": "Preheat is the best way to preheat your oven considering the dish. It takes approximately 10 minutes.",
     "CL_DV_OV_no_preheat_desc": "It is not always needed to preheat your oven. For example for reheating certain foods.",
-    "CL_DV_RF_ai_energy_mode_confirm_info": "Enabling AI Energy Navigation can reduce energy consumption, but it can also slow down cooling speed.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Turning on the AI Energy mode can reduce energy consumption, but it will also slow down the cooling speed",
     "CL_DV_RF_ice_maker_mode": "Ice maker mode",
     "CL_CF_SD_smart_delay": "Smart Delay",
     "CL_CF_SD_settings_subtitle": "Appliance will use off-peak hours when using delay mode.",
@@ -4156,9 +4156,9 @@
     "CL_CF_CS_ble_scan_have_not_found": "We haven’t found any device on bluetooth. You can click ‘TRY AGAIN’ to search again, or configure network in another way.",
     "CL_DV_WM_pump_cleaning": "Cleaning pump...",
     "CL_DV_WM_autodoes_tip": "Enable this feature and your device will smartly dispense detergent and fabric softener while you do your laundry.",
-    "CL_DV_WM_detergent_department_key": "DETERGENT COMPARTMENT",
+    "CL_DV_WM_detergent_department_key": "Detergent Compartment",
     "CL_DV_WM_Dosage_Amount_key": "Dosage Amount",
-    "CL_DV_WM_softener_department_key": "SOFTENER COMPARTMENT",
+    "CL_DV_WM_softener_department_key": "Softener Compartment",
     "CL_DV_WM_auto_does_with_detergent": "Autodose With Detergent",
     "CL_DV_WM_same_detergent": "Same Detergent",
     "CL_DV_WM_normal_dosage_weight_tip": "Normal dosage: 4~5kg clothing weight.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Discover",
     "CL_DV_HOB_cooking_assist": "Cooking Assist",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "CHOOSE THE DEVICE MODEL",
-    "CL_CF_FM_all_purchases_added_to_rf": "All your purchases have been added to the refrigerator"
+    "CL_CF_FM_all_purchases_added_to_rf": "All your purchases have been added to the refrigerator",
+    "CL_DV_HOB_guide_for_best_results": "Guidance for best results",
+    "CL_DV_HOB_program_content_step1": "Select the quantity.",
+    "CL_DV_HOB_program_content_step2": "Select the cooking zone you want to use. ",
+    "CL_DV_HOB_program_content_step3": "Confirm with “WIFI” button on selected zone on the induction hob.",
+    "CL_DV_HOB_temperature_content_step1": "Select the temperature.",
+    "CL_CF_AS_your_device_offline": "Youre device is offline.",
+    "CL_CF_AS_waiting": "waiting...",
+    "CL_CF_CS_window_air_select_panel": "Select the image that matches your unit’s control panel.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Select the cooking zone or the bridged zones you want to use. "
 }
