--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -459,7 +459,7 @@
     "functional_light": "Lumière fonctionnelle",
     "other_settings": "AUTRES RÉGLAGES",
     "circulation_mode": "Mode Circulation",
-    "appliance_information": "Informations relatives à l’appareil",
+    "appliance_information": "Informations sur l'appareil",
     "waranty_information": "Informations sur la garantie",
     "h": "h",
     "min": "min",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Aîné",
     "drum_illumination_desc": "L'éclairage du tambour éclaire l'intérieur du tambour, ce qui vous aide lors du chargement et du vidage de la machine : il est tout simplement plus facile de voir la chaussette restante à l'intérieur du tambour. Il facilite également l'inspection lors du nettoyage des poussoirs et des inserts de poussoirs.",
     "turn_on_drum_illumination": "Allumer/éteindre l'éclairage",
-    "wine_time": "Temps",
+    "wine_time": "fois",
     "delete_account_camel_case": "Supprimer le compte",
     "program_mode_desc": "Le mode Programme vous permet de personnaliser votre programme de séchage et de l'ajuster en fonction de vos besoins. Ci-dessous, vous pouvez en savoir plus sur les différents modes et leurs fonctionnalités.",
     "program_mode_available": "Les modes de lavage suivants sont disponibles :",
@@ -4156,15 +4156,15 @@
     "CL_CF_CS_ble_scan_have_not_found": "Nous n'avons trouvé aucun appareil sur bluetooth. Vous pouvez cliquer sur 'TRY AGAIN' pour effectuer une nouvelle recherche, ou configurer le réseau d'une autre manière.",
     "CL_DV_WM_pump_cleaning": "Pompe de nettoyage...",
     "CL_DV_WM_autodoes_tip": "Activez cette fonction et votre appareil distribuera intelligemment du détergent et de l'assouplissant pendant que vous faites votre lessive.",
-    "CL_DV_WM_detergent_department_key": "COMPARTIMENT À DÉTERGENT",
+    "CL_DV_WM_detergent_department_key": "Bac détergent",
     "CL_DV_WM_Dosage_Amount_key": "Quantité de dosage",
-    "CL_DV_WM_softener_department_key": "Bac Assouplissant",
+    "CL_DV_WM_softener_department_key": "Bac Assouplissant ",
     "CL_DV_WM_auto_does_with_detergent": "Autodose avec détergent",
     "CL_DV_WM_same_detergent": "Même détergent",
     "CL_DV_WM_normal_dosage_weight_tip": "Dosage normal : 4 à 5 kg de poids de vêtements.",
     "CL_DV_WM_pump_clean_note_1": "Remarques : Si vous souhaitez modifier le contenu du composant de distribution, n'oubliez pas de ",
     "CL_DV_WM_pump_clean_note_2": "nettoyez d'abord le composant.",
-    "CL_DV_WM_Pump_clean_key": "Nettoyage de la pompe",
+    "CL_DV_WM_Pump_clean_key": "Pompe Nettoyage",
     "CL_DV_WM_pump_clean_how_to_use": "Comment utiliser?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1.Videz et remplissez le compartiment d'eau avant d'activer la fonction de nettoyage de la pompe.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Activez la fonction de nettoyage de la pompe du côté de la machine.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Découvrir",
     "CL_DV_HOB_cooking_assist": "Aide à la cuisine",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "CHOISISSEZ LE MODÈLE D'APPAREIL",
-    "CL_CF_FM_all_purchases_added_to_rf": "Tous vos achats ont été ajoutés au réfrigérateur"
+    "CL_CF_FM_all_purchases_added_to_rf": "Tous vos achats ont été ajoutés au réfrigérateur",
+    "CL_DV_HOB_guide_for_best_results": "Conseils pour de meilleurs résultats",
+    "CL_DV_HOB_program_content_step1": "Sélectionnez la quantité.",
+    "CL_DV_HOB_program_content_step2": "Sélectionnez la zone de cuisson que vous souhaitez utiliser. ",
+    "CL_DV_HOB_program_content_step3": "Confirmez avec le bouton « WIFI » sur la zone sélectionnée de la table de cuisson à induction.",
+    "CL_DV_HOB_temperature_content_step1": "Sélectionnez la température.",
+    "CL_CF_AS_your_device_offline": "Votre appareil est hors ligne",
+    "CL_CF_AS_waiting": "en attendant...",
+    "CL_CF_CS_window_air_select_panel": "Sélectionnez l’image qui correspond au panneau de commande de votre appareil.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Sélectionnez la zone de cuisson ou les zones pontées que vous souhaitez utiliser. "
 }
