--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Anziano",
     "drum_illumination_desc": "L'illuminazione del tamburo illumina l'interno del tamburo, il che ti aiuta durante il caricamento e lo svuotamento della macchina: è semplicemente più facile vedere il calzino rimanente all'interno del tamburo. Facilita inoltre l'ispezione durante la pulizia dei sollevatori e degli inserti del sollevatore.",
     "turn_on_drum_illumination": "Accende/spegne l'illuminazione",
-    "wine_time": "Tempo",
+    "wine_time": "volta",
     "delete_account_camel_case": "Elimina account",
     "program_mode_desc": "La modalità Programma ti consente di personalizzare il tuo programma di asciugatura e regolarlo in base alle tue esigenze. Di seguito puoi leggere le diverse modalità e le loro funzionalità.",
     "program_mode_available": "Sono disponibili le seguenti modalità di lavaggio:",
@@ -4156,15 +4156,15 @@
     "CL_CF_CS_ble_scan_have_not_found": "Non è stato trovato alcun dispositivo su bluetooth. È possibile fare clic su 'RIPROVA' per effettuare una nuova ricerca o configurare la rete in un altro modo.",
     "CL_DV_WM_pump_cleaning": "Pompa di pulizia...",
     "CL_DV_WM_autodoes_tip": "Abilitando questa funzione, il tuo dispositivo erogherà in modo intelligente detersivo e ammorbidente mentre fai il bucato.",
-    "CL_DV_WM_detergent_department_key": "VANO DETERSIVO",
+    "CL_DV_WM_detergent_department_key": "Scomparto deter.",
     "CL_DV_WM_Dosage_Amount_key": "Quantità di dosaggio",
-    "CL_DV_WM_softener_department_key": "Scomparto Ammorbidente",
+    "CL_DV_WM_softener_department_key": "Scomparto Ammorb.",
     "CL_DV_WM_auto_does_with_detergent": "Autodose con detergente",
     "CL_DV_WM_same_detergent": "Stesso detersivo",
     "CL_DV_WM_normal_dosage_weight_tip": "Dosaggio normale: 4~5 kg di peso dell'indumento.",
     "CL_DV_WM_pump_clean_note_1": "Note: se si desidera modificare il contenuto del componente di erogazione, ricordarsi di ",
     "CL_DV_WM_pump_clean_note_2": "pulire prima il componente.",
-    "CL_DV_WM_Pump_clean_key": "Pulizia della pompa",
+    "CL_DV_WM_Pump_clean_key": "Pulizia Pompa",
     "CL_DV_WM_pump_clean_how_to_use": "Come si usa?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1. Svuotare e riempire il vano con acqua prima di attivare la funzione di pulizia della pompa.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2.Attivare la funzione di pulizia della pompa dal lato macchina.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Scoprire",
     "CL_DV_HOB_cooking_assist": "Aiuto in cucina",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "SCEGLI IL MODELLO DEL DISPOSITIVO",
-    "CL_CF_FM_all_purchases_added_to_rf": "Tutti i tuoi acquisti sono stati aggiunti al frigorifero"
+    "CL_CF_FM_all_purchases_added_to_rf": "Tutti i tuoi acquisti sono stati aggiunti al frigorifero",
+    "CL_DV_HOB_guide_for_best_results": "Guida per ottenere i migliori risultati",
+    "CL_DV_HOB_program_content_step1": "Seleziona la quantità.",
+    "CL_DV_HOB_program_content_step2": "Seleziona la zona di cottura che desideri utilizzare. ",
+    "CL_DV_HOB_program_content_step3": "Confermare con il tasto “WIFI” sulla zona selezionata sul piano cottura a induzione.",
+    "CL_DV_HOB_temperature_content_step1": "Selezionare la temperatura.",
+    "CL_CF_AS_your_device_offline": "Il tuo dispositivo è offline",
+    "CL_CF_AS_waiting": "in attesa...",
+    "CL_CF_CS_window_air_select_panel": "Seleziona l'immagine che corrisponde al pannello di controllo della tua unità.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Selezionare la zona di cottura o le zone collegate che si desidera utilizzare. "
 }
