--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -765,10 +765,10 @@
     "expiry_date": "有効期限",
     "item_photo": "商品写真",
     "send_to_shopping_list": "買い物リストに送信",
-    "hisrf_exit_eco_mode": "手動温度調整 ECO モードを終了する",
+    "hisrf_exit_eco_mode": "ECOモードを終了する",
     "hisrf_exit_holiday_mode": "手動温度調整 ホリデーモードを終了する",
-    "hisrf_exit_super_freeze_mode": "手動温度調整 スーパーフリーズモードを終了する",
-    "hisrf_exit_super_cool_mode": "手動温度調整 スーパークールモードを終了する",
+    "hisrf_exit_super_freeze_mode": "急速冷凍モードを終了する",
+    "hisrf_exit_super_cool_mode": "急速冷却モードを終了する",
     "hisrf_water_filter_service": "アフターサービスへのお問い合わせ",
     "shopping_list_empty_title": "買い物リストが空です!",
     "shopping_list_empty_hint": "「アイテムを追加」ボタンをクリックして、ショッピングリストにアイテムを追加するか、ライブラリからアイテムを追加します。",
@@ -3347,7 +3347,7 @@
     "after_sale_report_failed_desc": "予期しないエラーが発生しました。もう一度試すか、アフターサービスにお問い合わせください。",
     "country_and_region": "国 / 地域",
     "rf_ai": "AI",
-    "exit_ai_mode_toast": "手動温度調整 ECO モードを終了する",
+    "exit_ai_mode_toast": "AIモードを終了する",
     "rf_fuzzy_desc": "冷蔵室の温度は自動的に5℃に、冷凍室の温度は-18℃に切り替わり、食品を最良の状態で保存するスマートモードです。",
     "after_sale_unsupported_ts_tips": "申し訳ございませんが、このデバイスのトラブルシューティング情報は現在利用できません。 私たちのチームは、このデバイスのサポートをすぐに提供できるよう取り組んでいます。",
     "after_sale_unsupported_ri_tips": "申し訳ございませんが、現在このデバイスの問題を報告することはできません。 私たちのチームは、このデバイスのサポートをすぐに提供できるよう取り組んでいます。",
@@ -3579,8 +3579,8 @@
     "blue_power_off_title_add_device": "このデバイスの Bluetooth をオンにする",
     "blue_permission_off_title_add_device": "ConnectLife では Bluetooth が無効になっています",
     "time_care_desc": "この機能を有効にすると、洗濯プログラムはより短い洗濯時間で実行されます。",
-    "refr_exit_super_cool_tips": "スーパーフリーザーモードをオンにして、スーパークールモードを終了します",
-    "refr_exit_super_freeze_tips": "スーパークールモードをオンにして、スーパーフリーズモードを終了します",
+    "refr_exit_super_cool_tips": "急速冷却モードを終了する",
+    "refr_exit_super_freeze_tips": "急速冷凍モードを終了する",
     "enter_recipe_name": "レシピ名を入力してください...",
     "results": "結果",
     "no_favourite_recipes": "お気に入りのレシピはありません",
@@ -4055,7 +4055,7 @@
     "CL_DV_OV_fast_preheat_desc": "高速予熱はオーブンを予熱する最も早い方法です。所要時間は約 7 分です。",
     "CL_DV_OV_preheat_desc": "料理を考慮してオーブンを予熱するには、予熱が最適です。所要時間は約 10 分です。",
     "CL_DV_OV_no_preheat_desc": "オーブンを予熱する必要は必ずしもありません。たとえば、特定の食品を再加熱する場合などです。",
-    "CL_DV_RF_ai_energy_mode_confirm_info": "AI エネルギーナビゲーションを有効にするとエネルギー消費を削減できますが、冷却速度が遅くなる可能性もあります。",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "AIモードをオンにすることでエネルギー消費は減りますが、冷房の速度も遅くなります。",
     "CL_DV_RF_ice_maker_mode": "製氷機モード",
     "CL_CF_SD_smart_delay": "スマートディレイ",
     "CL_CF_SD_settings_subtitle": "遅延モードを使用する場合、アプライアンスはオフピーク時間を使用します。",
@@ -4080,7 +4080,7 @@
     "CL_DV_OV_multi_tray": "マルチトレイ",
     "CL_DV_OV_multi": "マルチ",
     "CL_DV_RF_ice_off": "製氷停止",
-    "CL_DV_RF_ion_preservation": "ハイナノ",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
     "CL_DV_RF_ai_energy": "AI省エネ",
     "CL_DV_RF_adaptive_temperature": "自己適応",
     "CL_DV_RF_normal_ice_making": "製氷",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "発見する",
     "CL_DV_HOB_cooking_assist": "調理補助",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "デバイスモデルを選択",
-    "CL_CF_FM_all_purchases_added_to_rf": "購入済みのものはすべて「食材管理」モジュールに追加されています"
+    "CL_CF_FM_all_purchases_added_to_rf": "購入済みのものはすべて「食材管理」モジュールに追加されています",
+    "CL_DV_HOB_guide_for_best_results": "最良の結果を得るためのガイダンス",
+    "CL_DV_HOB_program_content_step1": "数量を選択してください。",
+    "CL_DV_HOB_program_content_step2": "使用する調理ゾーンを選択します。 ",
+    "CL_DV_HOB_program_content_step3": "電磁調理器の選択したゾーンの「WIFI」ボタンを押して確定します。",
+    "CL_DV_HOB_temperature_content_step1": "温度を選択してください。",
+    "CL_CF_AS_your_device_offline": "デバイスがオフラインです",
+    "CL_CF_AS_waiting": "待っている...",
+    "CL_CF_CS_window_air_select_panel": "ユニットのコントロール パネルに一致する画像を選択します。",
+    "CL_DV_HOB_program_zone_bridge_step2": "使用する調理ゾーンまたはブリッジゾーンを選択します。 "
 }
