--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Wylot",
     "hih_filter_plasma": "Filtr plazmowy",
     "wm_sell_point_video": "Punkty sprzedaży - nagranie",
-    "wm_max": "Max.",
+    "wm_max": "Max",
     "timing_add_less_then_4_hour": "Czas nagrzewania jest krótki, ustawiona temperatura może nie zostać osiągnięta",
     "ticket_save_success": "Bilet został pomyślnie zapisany",
     "native_language_tips": "To ustawienie nie zmieni języka aplikacji. Służy wyłącznie do celów komunikacyjnych.",
@@ -2505,7 +2505,7 @@
     "sabbath_mode_desc": "Włącza i wyłącza tryb sabatu. Panel sterowania, podświetlenie i brzęczyk nie będą działać, gdy tryb jest włączony.",
     "door_open": "Otwarte drzwi",
     "door_open_t": "Czas otwarcia drzwi",
-    "wine_times": "okres",
+    "wine_times": "razy",
     "monitor_t": "Monitory",
     "mon_s": "P",
     "tue_s": "W",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Starszy",
     "drum_illumination_desc": "Oświetlenie bębna oświetla wnętrze bębna, co pomaga podczas załadunku i opróżniania maszyny – po prostu łatwiej jest zobaczyć pozostałą skarpetkę w bębnie. Ułatwia także kontrolę podczas czyszczenia podnośników i wkładek podnośników.",
     "turn_on_drum_illumination": "Włącz/wyłącz podświetlenie",
-    "wine_time": "Czas",
+    "wine_time": "raz",
     "delete_account_camel_case": "Usuń konto",
     "program_mode_desc": "Tryb programu umożliwia dostosowanie programu suszenia do własnych potrzeb. Poniżej możesz przeczytać o różnych trybach i ich funkcjonalności.",
     "program_mode_available": "Dostępne są następujące tryby prania:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "Nie znaleźliśmy żadnego urządzenia na bluetooth. Możesz kliknąć \"TRY AGAIN\", aby wyszukać ponownie lub skonfigurować sieć w inny sposób.",
     "CL_DV_WM_pump_cleaning": "Czyszczenie pompy...",
     "CL_DV_WM_autodoes_tip": "Włącz tę funkcję, a Twoje urządzenie będzie inteligentnie dozować detergent i płyn zmiękczający podczas prania.",
-    "CL_DV_WM_detergent_department_key": "KOMORA NA DETERGENT",
+    "CL_DV_WM_detergent_department_key": "Pranie",
     "CL_DV_WM_Dosage_Amount_key": "Ilość dawki",
     "CL_DV_WM_softener_department_key": "Zmiękczanie",
     "CL_DV_WM_auto_does_with_detergent": "Autodozowanie z detergentem",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Normalna dawka: 4~5 kg wagi odzieży.",
     "CL_DV_WM_pump_clean_note_1": "Uwagi: Jeśli chcesz zmienić zawartość komponentu dozującego, pamiętaj, aby ",
     "CL_DV_WM_pump_clean_note_2": "najpierw wyczyść komponent.",
-    "CL_DV_WM_Pump_clean_key": "Pompa czysta",
+    "CL_DV_WM_Pump_clean_key": "Czysz. pompy",
     "CL_DV_WM_pump_clean_how_to_use": "Jak używać?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1. Przed uruchomieniem funkcji czyszczenia pompki opróżnij komorę i napełnij ją wodą.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktywuj funkcję czyszczenia pompy od strony maszyny.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Odkryć",
     "CL_DV_HOB_cooking_assist": "Pomoc w gotowaniu",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "WYBIERZ MODEL URZĄDZENIA",
-    "CL_CF_FM_all_purchases_added_to_rf": "Wszystkie Twoje zakupy zostały dodane do lodówki"
+    "CL_CF_FM_all_purchases_added_to_rf": "Wszystkie Twoje zakupy zostały dodane do lodówki",
+    "CL_DV_HOB_guide_for_best_results": "Wskazówki dotyczące najlepszych wyników",
+    "CL_DV_HOB_program_content_step1": "Wybierz ilość.",
+    "CL_DV_HOB_program_content_step2": "Wybierz strefę gotowania, której chcesz użyć. ",
+    "CL_DV_HOB_program_content_step3": "Potwierdź przyciskiem „WIFI” na wybranej strefie płyty indukcyjnej.",
+    "CL_DV_HOB_temperature_content_step1": "Wybierz temperaturę.",
+    "CL_CF_AS_your_device_offline": "Twoje urządzenie jest offline",
+    "CL_CF_AS_waiting": "czekanie...",
+    "CL_CF_CS_window_air_select_panel": "Wybierz obraz odpowiadający panelowi sterowania Twojego urządzenia.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Wybierz strefę grzejną lub strefy łączone, których chcesz użyć. "
 }
