--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Saída",
     "hih_filter_plasma": "Filtro de plasma",
     "wm_sell_point_video": "Vídeo do ponto de venda",
-    "wm_max": "Máx.",
+    "wm_max": "Máx",
     "timing_add_less_then_4_hour": "O tempo de aquecimento é curto, a temperatura definida pode não ser atingida",
     "ticket_save_success": "Pedido de assistência submetido",
     "native_language_tips": "Esta definição não altera o idioma da aplicação. É utilizada apenas para efeitos de comunicação.",
@@ -2505,7 +2505,7 @@
     "sabbath_mode_desc": "Liga e desliga o modo sabbath. O painel de controlo, a luz e o sinal sonoro não funciona quando o modo está ligado.",
     "door_open": "Porta aberta",
     "door_open_t": "Porta aberta",
-    "wine_times": "Vezes",
+    "wine_times": "vezes",
     "monitor_t": "Monitores",
     "mon_s": "S",
     "tue_s": "T",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Idoso",
     "drum_illumination_desc": "A iluminação do tambor ilumina o interior, o que o ajuda a carregar e a esvaziar a máquina - é simplesmente mais fácil ver o que resta no interior do tambor.",
     "turn_on_drum_illumination": "Ligar/desligar a iluminação",
-    "wine_time": "Tempo",
+    "wine_time": "vez",
     "delete_account_camel_case": "Eliminar Conta",
     "program_mode_desc": "O modo de programa permite-lhe personalizar o seu programa de secagem e ajustá-lo de acordo com as suas necessidades. Abaixo pode ler sobre os diferentes modos e a sua funcionalidade.",
     "program_mode_available": "Estão disponíveis os seguintes modos de lavagem:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "Não encontrámos nenhum aparelho com bluetooth. Pode clicar em \"TENTAR NOVAMENTE\" para efetuar uma nova pesquisa ou configurar a rede de outra forma.",
     "CL_DV_WM_pump_cleaning": "Bomba de limpeza...",
     "CL_DV_WM_autodoes_tip": "Active esta funcionalidade e o seu dispositivo distribuirá de forma inteligente o detergente e o amaciador enquanto lava a roupa.",
-    "CL_DV_WM_detergent_department_key": "COMPARTIMENTO DO DETERGENTE",
+    "CL_DV_WM_detergent_department_key": "Comp. Detergente",
     "CL_DV_WM_Dosage_Amount_key": "Quantidade de dosagem",
     "CL_DV_WM_softener_department_key": "Comp. Amaciador",
     "CL_DV_WM_auto_does_with_detergent": "Autodose com Detergente",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Dosagem normal: 4 a 5 kg de peso de roupa.",
     "CL_DV_WM_pump_clean_note_1": "Notas: Se pretender alterar o conteúdo do componente dispensador, lembre-se de ",
     "CL_DV_WM_pump_clean_note_2": "Limpe o componente primeiro.",
-    "CL_DV_WM_Pump_clean_key": "Bomba limpa",
+    "CL_DV_WM_Pump_clean_key": "Limpeza da Bomba",
     "CL_DV_WM_pump_clean_how_to_use": "Como usar?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1. Esvazie e encha o compartimento com água antes de ativar a função de limpeza da bomba.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Ative a função de limpeza da bomba no lado da máquina.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "Descobrir",
     "CL_DV_HOB_cooking_assist": "Auxiliar de Cozinha",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ESCOLHA O MODELO DO DISPOSITIVO",
-    "CL_CF_FM_all_purchases_added_to_rf": "Todas as suas compras foram adicionadas à geladeira"
+    "CL_CF_FM_all_purchases_added_to_rf": "Todas as suas compras foram adicionadas à geladeira",
+    "CL_DV_HOB_guide_for_best_results": "Orientação para melhores resultados",
+    "CL_DV_HOB_program_content_step1": "Selecione a quantidade.",
+    "CL_DV_HOB_program_content_step2": "Selecione a zona de cozimento que você deseja usar. ",
+    "CL_DV_HOB_program_content_step3": "Confirme com o botão “WIFI” na zona selecionada na placa de indução.",
+    "CL_DV_HOB_temperature_content_step1": "Selecione a temperatura.",
+    "CL_CF_AS_your_device_offline": "Seu dispositivo está offline",
+    "CL_CF_AS_waiting": "esperando...",
+    "CL_CF_CS_window_air_select_panel": "Selecione a imagem que corresponde ao painel de controle da sua unidade.",
+    "CL_DV_HOB_program_zone_bridge_step2": "Selecione a zona de cozimento ou as zonas interligadas que você deseja usar. "
 }
