--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -765,10 +765,10 @@
     "expiry_date": "到期日",
     "item_photo": "项目照片",
     "send_to_shopping_list": "发送到购物清单",
-    "hisrf_exit_eco_mode": "手动温度调节 退出节能模式",
+    "hisrf_exit_eco_mode": "退出 ECO 模式",
     "hisrf_exit_holiday_mode": "手动温度调节 退出假期模式",
-    "hisrf_exit_super_freeze_mode": "手动温度调节 退出速冻模式",
-    "hisrf_exit_super_cool_mode": "手动温度调节 退出速冷模式",
+    "hisrf_exit_super_freeze_mode": "退出速冻模式",
+    "hisrf_exit_super_cool_mode": "退出速冷模式",
     "hisrf_water_filter_service": "联系售后服务",
     "shopping_list_empty_title": "购物清单是空的！",
     "shopping_list_empty_hint": "单击“添加物品”按钮将项目添加到购物清单或从食材库添加。",
@@ -3347,7 +3347,7 @@
     "after_sale_report_failed_desc": "发生意外错误。请重试或联系售后服务。",
     "country_and_region": "国家/地区",
     "rf_ai": "智能",
-    "exit_ai_mode_toast": "手动温度调节 退出智能模式",
+    "exit_ai_mode_toast": "退出智能模式",
     "rf_fuzzy_desc": "将冷藏室温度设置为5℃，冷冻室温度设置为-18℃，让食材保持最佳状态的省心模式。",
     "after_sale_unsupported_ts_tips": "同时，如果您对产品有疑问，或者需要零件或服务，请联系您所在地区的客户支持团队。\n\n如果您在美国，可以拨打 1-877-465-3566 联系我们的客户支持团队。\n\n对于其他争议，请查看您的产品用户手册中提供的信息。",
     "after_sale_unsupported_ri_tips": "同时，如果您对产品有疑问，或者需要零件或服务，请联系您所在地区的客户支持团队。\n\n如果您在美国，可以拨打 1-877-465-3566 联系我们的客户支持团队。\n\n对于其他争议，请查看您的产品用户手册中提供的信息。",
@@ -3579,8 +3579,8 @@
     "blue_power_off_title_add_device": "打开此设备的蓝牙",
     "blue_permission_off_title_add_device": "ConnectLife 已禁用蓝牙",
     "time_care_desc": "当此功能启动时，洗涤程序将以较短的洗涤时间执行。",
-    "refr_exit_super_cool_tips": "当前速冻模式开启，关闭速冷模式",
-    "refr_exit_super_freeze_tips": "当前速冷模式开启，关闭速冻模式",
+    "refr_exit_super_cool_tips": "退出速冷模式",
+    "refr_exit_super_freeze_tips": "退出速冻模式",
     "enter_recipe_name": "输入菜谱名称...",
     "results": "结果",
     "no_favourite_recipes": "没有喜欢的菜谱",
@@ -4055,7 +4055,7 @@
     "CL_DV_OV_fast_preheat_desc": "快速预热是预热烤箱最快的方法。大约需要 7 分钟。",
     "CL_DV_OV_preheat_desc": "预热是预热烤箱的最佳方式，具体取决于菜肴。预热大约需要 10 分钟。",
     "CL_DV_OV_no_preheat_desc": "并非总是需要预热烤箱。例如，重新加热某些食物时。",
-    "CL_DV_RF_ai_energy_mode_confirm_info": "开启AI能量导航可以减少能耗，但也会减慢降温速度。",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "开启AI节能模式可以减少能耗，但也会减慢制冷速度",
     "CL_DV_RF_ice_maker_mode": "制冰机模式",
     "CL_CF_SD_smart_delay": "智能延时",
     "CL_CF_SD_settings_subtitle": "使用延迟模式时，设备将使用非高峰时段。",
@@ -4080,7 +4080,7 @@
     "CL_DV_OV_multi_tray": "多托盘",
     "CL_DV_OV_multi": "多",
     "CL_DV_RF_ice_off": "制冰关",
-    "CL_DV_RF_ion_preservation": "海诺",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
     "CL_DV_RF_ai_energy": "AI节能",
     "CL_DV_RF_adaptive_temperature": "自适应",
     "CL_DV_RF_normal_ice_making": "普通制冰",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "发现",
     "CL_DV_HOB_cooking_assist": "烹饪助手",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "选择设备型号",
-    "CL_CF_FM_all_purchases_added_to_rf": "您购买的所有商品已添加到冰箱"
+    "CL_CF_FM_all_purchases_added_to_rf": "您购买的所有商品已添加到冰箱",
+    "CL_DV_HOB_guide_for_best_results": "获得最佳结果的指导",
+    "CL_DV_HOB_program_content_step1": "选择数量。",
+    "CL_DV_HOB_program_content_step2": "选择您想要使用的烹饪区。 ",
+    "CL_DV_HOB_program_content_step3": "使用电磁炉上选定区域的“WIFI”按钮进行确认。",
+    "CL_DV_HOB_temperature_content_step1": "选择温度。",
+    "CL_CF_AS_your_device_offline": "您的设备处于离线状态",
+    "CL_CF_AS_waiting": "等待...",
+    "CL_CF_CS_window_air_select_panel": "选择与您的设备控制面板相匹配的图像。",
+    "CL_DV_HOB_program_zone_bridge_step2": "选择您想要使用的烹饪区或桥接区。 "
 }
