--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "장로",
     "drum_illumination_desc": "드럼 조명은 드럼 내부를 조명하여 기계를 싣고 비울 때 도움이 됩니다. 드럼 내부에 남아 있는 양말을 쉽게 확인할 수 있습니다. 또한 리프터 및 리프터 인서트를 청소할 때 검사도 용이하게 합니다.",
     "turn_on_drum_illumination": "조명 켜기/끄기",
-    "wine_time": "시각",
+    "wine_time": "번",
     "delete_account_camel_case": "계정 삭제",
     "program_mode_desc": "프로그램 모드를 사용하면 건조 프로그램을 사용자 정의하고 필요에 따라 조정할 수 있습니다. 아래에서 다양한 모드와 해당 기능에 대해 읽어볼 수 있습니다.",
     "program_mode_available": "다음과 같은 세탁 모드를 사용할 수 있습니다.",
@@ -4632,5 +4632,14 @@
     "CL_CF_HP_discover": "발견하다",
     "CL_DV_HOB_cooking_assist": "요리 지원",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "기기 모델을 선택하세요",
-    "CL_CF_FM_all_purchases_added_to_rf": "모든 구매 상품이 냉장고에 추가되었습니다."
+    "CL_CF_FM_all_purchases_added_to_rf": "모든 구매 상품이 냉장고에 추가되었습니다.",
+    "CL_DV_HOB_guide_for_best_results": "최상의 결과를 위한 지침",
+    "CL_DV_HOB_program_content_step1": "수량을 선택하세요.",
+    "CL_DV_HOB_program_content_step2": "사용하고 싶은 조리대를 선택하세요. ",
+    "CL_DV_HOB_program_content_step3": "인덕션 쿡탑에서 선택한 구역의 \"WIFI\" 버튼을 눌러 확인하세요.",
+    "CL_DV_HOB_temperature_content_step1": "온도를 선택하세요.",
+    "CL_CF_AS_your_device_offline": "귀하의 기기는 오프라인 상태입니다.",
+    "CL_CF_AS_waiting": "대기 중...",
+    "CL_CF_CS_window_air_select_panel": "귀하의 장치 제어판과 일치하는 이미지를 선택하세요.",
+    "CL_DV_HOB_program_zone_bridge_step2": "사용하고 싶은 조리 구역이나 브리지 구역을 선택하세요. "
 }
